--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 3;
-  flex-basis: auto;
+  flex-basis: 0;
   border: 1px solid #CAD0D2;
   border-radius: 4px;
   border: none;
